* [DEV] Исправление ошибки когда не задан явно путь к web.xml * [DEV] мелкие правки стартовых скриптов